Next batch (#125)
* Fixed #123 Adding the size of the files being parsed, and total size in bytes being parsed.
* Fixed #119 : We have now fixed the deprecated newInstance() method. Also we have encpsulated exceptions into a try catch
* Fixed #119 : We have now fixed the deprecated newInstance() method. Also we have encpsulated exceptions into a try catch
* Fixed issue with hard-coded Generic entry in LogData
* First fix for issues #117 & #116 we can now also include the files and their paths in the results
* Fixed #117 tested with JSON
* Fixing javadoc
* Raising coverage, and added an SDK example for the tests
* Clarified some of the exceptions
* Adding missing log file